--- a/tweets.html
+++ b/tweets.html
@@ -39,7 +39,10 @@
         Here presented a collection of Roberto's tweets he considers precious trying to save from the noise of the time.
       </div>
     </div>
-    
+
+    <div class="section">
+      <blockquote class="twitter-tweet"><p lang="en" dir="ltr">7/7) Is there maybe need in a tech department of a person fully dedicated to this activity? Never seen a job offer with titles like: &quot;Query Engineer&quot; or &quot;Backend Query Developer&quot;</p>&mdash; robimalco (@robimalco) <a href="https://twitter.com/robimalco/status/1303774314274189314?ref_src=twsrc%5Etfw">September 9, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
     <div class="section">
       <blockquote class="twitter-tweet"><p lang="en" dir="ltr">1/7) Something I am pondering on, since now I have a (more or less) rough idea of what happens behind the scenes of a web application</p>&mdash; robimalco (@robimalco) <a href="https://twitter.com/robimalco/status/1303774300588126213?ref_src=twsrc%5Etfw">September 9, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
