--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
           </a>
         </li>
         <li class="icon_list__element">
+          <a href="https://dribbble.com/robimalco" target="_blank" rel="noopener">
+            <img src="images/social/dribbble.png" class="icon_list__logo" alt="dribbble" loading="lazy">
+          </a>
+        </li>
+        <li class="icon_list__element">
           <a href="https://www.meetup.com/it-IT/members/172332422/" target="_blank" rel="noopener">
             <img src="images/social/meetup.png" class="icon_list__logo" alt="meetup" loading="lazy">
           </a>
