--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         He has a Bachelor's degree in Management Engineering from
         the University of Applied Sciences of Southern Switzerland,
         with two additional years of Computer Science from the same institute.
-        Roberto has collaborated with well-established companies, as well as with young startups,
+        Roberto has collaborated with established companies, as well as with young startups,
         gaining experience in multiple industries, diving into any kind of data.
         He loves designing and developing tools, automating processes, connecting dots.
         As a freelancer, he helps companies to get more out from their data.
