--- a/work.html
+++ b/work.html
@@ -179,7 +179,7 @@
           Activity strictly connected with web crawling, but also with computer security.
           Without dealing with espionage or unethical things, API reverse engineering can
           be necessary for example when documentation is not properly done, or to QA software.
-          There is the often the need to self understand how things work behind the scenes.
+          Often there is the need to self understand how things work behind the scenes.
         </div>
       </div>
       <div class="bottom_space">
