--- a/work.html
+++ b/work.html
@@ -231,7 +231,7 @@
       </div>
       <div class="content">
         Wow, you have reached this point.<br>
-        There might be a bit more to read, not specifically connected to my career.<br>
+        There might be a bit more to read, not specifically career related.<br>
         <a href="thoughts.html" target="_blank" rel="noopener" class="h1 to_next">
           I accept this risk
         </a>
