--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
             <img src="images/social/meetup.png" class="icon_list__logo" alt="meetup" loading="lazy">
           </a>
         </li>
+        <li class="icon_list__element">
+          <a href="https://www.udemy.com/user/roberto-malcotti/" target="_blank" rel="noopener">
+            <img src="images/social/udemy.png" class="icon_list__logo" alt="udemy" loading="lazy">
+          </a>
+        </li>
       </ul>
     </div>
     <div class="section" id="Technology">
