--- a/thoughts.html
+++ b/thoughts.html
@@ -34,6 +34,28 @@
     
     <div class="section">
       <div class="sub_title h2">
+        <b>Multiply</b>
+      </div>
+      <div class="thoughts_date_place"><i>14/10/2020 ~ Kreuzberg ~ <span id="countWords11"></span> words</i></div>
+      <div class="content content_blog" id="thoughts11">
+        It is paradoxical that at some point in order to improve in one direction it is necessary to undertake new ones.
+
+        This is due to the fact that arts and techniques are linked together by unidentifiable threads.
+
+        Experience helps identifying these structures.
+
+        Multiplication means the awareness of being able to enormously increase a total by vibrating skills that are not strictly linked to each other,
+        
+        obtaining a greater result than would be possible by developing certain skills individually.
+
+        From an economic point of view, the comparison could be made with composite interests.
+
+        Time if used correctly is still the most exceptional of multipliers.
+      </div>
+    </div>  
+
+    <div class="section">
+      <div class="sub_title h2">
         <b>Continuity</b>
       </div>
       <div class="thoughts_date_place"><i>30/09/2020 ~ Treptow ~ <span id="countWords10"></span> words</i></div>
