--- a/thoughts.html
+++ b/thoughts.html
@@ -38,7 +38,7 @@
       </div>
       <div class="thoughts_date_place"><i>14/10/2020 ~ Kreuzberg ~ <span id="countWords11"></span> words</i></div>
       <div class="content content_blog" id="thoughts11">
-        It is paradoxical that at some point in order to improve in one direction it is necessary to undertake new ones.
+        Paradoxically at some point in order to improve in one direction it is necessary to undertake new ones.
 
         This is due to the fact that arts and techniques are linked together by unidentifiable threads.
 
