--- a/thoughts.html
+++ b/thoughts.html
@@ -46,7 +46,7 @@
 
         Multiplication means the awareness of being able to enormously increase a total by vibrating skills that are not strictly linked to each other,
         
-        obtaining a greater result than would be possible by developing certain skills individually.
+        obtaining a greater result than would not be possible by developing certain skills individually.
 
         From an economic point of view, the comparison could be made with composite interests.
 
