--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
             <img src="images/social/udemy.png" class="icon_list__logo" alt="udemy" loading="lazy">
           </a>
         </li>
+        <li class="icon_list__element">
+          <a href="https://www.figma.com/@robimalco" target="_blank" rel="noopener">
+            <img src="images/social/figma.png" class="icon_list__logo" alt="figma" loading="lazy">
+          </a>
+        </li>
       </ul>
     </div>
     <div class="section" id="Technology">
