Update cv location

--- a/hire.html
+++ b/hire.html
@@ -97,7 +97,7 @@
       </div>
       <ul class="icon_list">
         <li class="icon_list__element">
-          <a target="_blank"  rel="noopener" href="Roberto_Malcotti_CV.pdf">
+          <a target="_blank"  rel="noopener" href="cv.pdf">
             <img src="images/tech/resume.png" class="icon_list__logo" alt="resume" loading="lazy">
           </a>
         </li>
