--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
           </a>
         </li>
         <li class="icon_list__element">
+          <a href="https://kaggle.com/robimalco" target="_blank" rel="noopener">
+            <img src="images/social/kaggle.png" class="icon_list__logo" alt="kaggle" loading="lazy">
+          </a>
+        </li>
+        <li class="icon_list__element">
           <a href="https://www.linkedin.com/in/malcotti" target="_blank" rel="noopener">
             <img src="images/social/linkedin.png" class="icon_list__logo" alt="linkedin" loading="lazy">
           </a>
