--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <title>Hire</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Hire Roberto" content="Enhance your data through meaningful collaborations.">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
