--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
             <img src="images/social/figma.png" class="icon_list__logo" alt="figma" loading="lazy">
           </a>
         </li>
+        <li class="icon_list__element">
+          <a href="https://www.goodreads.com/robimalco" target="_blank" rel="noopener">
+            <img src="images/social/goodreads.png" class="icon_list__logo" alt="goodreads" loading="lazy">
+          </a>
+        </li>
       </ul>
     </div>
     <div class="section" id="Technology">
