--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
             <img src="images/social/goodreads.png" class="icon_list__logo" alt="goodreads" loading="lazy">
           </a>
         </li>
+        <li class="icon_list__element">
+          <a href="https://lichess.org/@/robimalco" target="_blank" rel="noopener">
+            <img src="images/social/lichess.png" class="icon_list__logo" alt="lichess" loading="lazy">
+          </a>
+        </li>
       </ul>
     </div>
     <div class="section" id="Technology">
