--- a/thoughts.html
+++ b/thoughts.html
@@ -30,7 +30,7 @@
       
       Sunday serves as a buffer to realign mental and physical energies dissipated throughout the week.
       
-      Nature itself did not foresee the existence of Sundays or weekly intervals, but it is extremely convenient for human beings regulated  following certain cycles that are nowadays totally established and accepted.
+      Nature itself did not foresee the existence of Sundays or weekly intervals, but it is extremely convenient for humans to be regulated  following certain cycles that are nowadays totally established and accepted.
       </div>
     </div>  
 
